organize imports, format, cleanup, etc
Signed-off-by: Rob Stryker <rob@oxbeef.net>

Cleanup pt 2

Signed-off-by: Rob Stryker <rob@oxbeef.net>